syntax = "proto3";

package io.harness.delegate;

option java_multiple_files = true;

import "io/harness/delegate/ng_delegate_task.proto";

service NgDelegateTaskResponseService {
  rpc SendTaskResult(SendTaskResultRequest) returns (SendTaskResultResponse);
}