syntax = "proto3";

package io.harness.delegate;

option java_multiple_files = true;

message SendTaskResultRequest {
  string task_id = 1;
  bytes response_data = 2;
}

message SendTaskResultResponse {
  bool acknowledgement = 1;
}
